#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-04-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999906 released.

        * Modified Makefile.PL to fix regex that broker permissions.


2012-04-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999905 released.

        * Changed permission for setuid for fullauto.pl from
          511 to 555 for Cygwin installations.

        * Changed permission for setuid for fullauto.pl from
          4511 to 4555 for Cygwin installations.

        * Modified Makefile.PL to fix domain id installations.


2012-03-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999904 released.

        * Changed permission for setuid for fullauto.pl from
          500 to 511.

        * Modified Makefile.PL to check Cygwin version and abort
          if version is incompatible.


2012-03-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999903 released.

        * Fixed cwd() error when using combined handle.
          _ftp_handle was not getting it's directory changed.


2012-03-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999902 released.

        * Added conditional to avoid connection closed message
          when such a condition occurs during cleanup.


2012-03-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999901 released.

        * Added fix to remove new line from $stderr variable
          during compilation phase.

        * Added Domain logic to Makefile.PL.


2012-03-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999 released.
