@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 db40388dc9ed951daecb954dc6bc351c0229ace6 ChangeLog
+SHA1 36ae74b598fec9c29fe10d1913dceee75d3538c7 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 1e59b2959275e051beb98ed6189b4dc521eb3299 META.yml
+SHA1 b70685f4ad0faded0e7750d095bfc82f27042fa6 META.yml
 SHA1 ff35cf1af379307cd2088cf801dcfd3c24c09149 MYMETA.json
 SHA1 1d86d4d631ba1c900fca87906e324e2c894e05d7 MYMETA.yml
-SHA1 755f5cd5c7b6cd5f730a9db68ec43dfe10825291 Makefile.PL
+SHA1 0b568f694b61257d68825258cd9816c49cf78991 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 cd5b44d02ea841554c6044984faa90fc241e12dd lib/Net/FullAuto.pm
+SHA1 622de1b9c9430baf03364124d03004023e83f36c lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -48,13 +48,13 @@ SHA1 5e5bf1fb274122e41b89de64d065cfbacc8b2cd6 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 532a954b8f2f3183851b3381bef60d7d70fa0541 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 a624f36d14585c7635e2a04cb771e0bf0157c0f7 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 892797bba9ec43a778b41c2949476e6f548d7671 lib/Net/FullAuto/FA_Core.pm
+SHA1 6fd54792d2d58479f82aa0b8d0d54d1fead44614 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAk+Wjo8ACgkQJM3IZYB6aOqiNgCfT7SA47GHvpdzb0P0p954RsHZ
-6WoAoIrC1eMWS2Z8oO5UMFPpN0cX5+k4
-=LXv2
+iEYEARECAAYFAk+Z91cACgkQJM3IZYB6aOpkQACfSfdxoN7WBWCU7B9v2prGW4oa
+K5QAoKc+LUHoyU6hc3xSi0Vmjb9XrVkl
+=ipF5
 -----END PGP SIGNATURE-----
