@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999906';
+our $VERSION='0.999907';
 
 
 use 5.005;
